--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "FlatListApp",
-    "slug": "FlatListApp",
+    "name": "ReactNativeApp2",
+    "slug": "ReactNativeApp2",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
