--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "flatlistapp",
+  "name": "ReactNativeApp2",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "web-chrome": "expo start --web --dev-client --dev-client-host localhost"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -16,7 +17,10 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-user-avatar": "^1.0.8",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
